kubernetes/simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: # adding the label is not required here, but we need it later!
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
