kubernetes/service.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: # adding the label is not required here, but we need it later!
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: nginx # here we are referring back to the label from before, now it is required
  ports:
    - port: 1234
      targetPort: 80
