kubernetes/ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: # adding the label is not required here, but we need it later!
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: my-service
      port:
        number: 1234
